--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "@google-cloud/datastore": "^1.1.0",
     "express": "^4.12.3",
-    "swagger-express-mw": "^0.1.0",
-    "uuid": "^3.1.0"
+    "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
     "should": "^7.1.0",
